changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Remove socket_info.nconn which gets invalid in some cases.
Nicolas Weeger 2011-07-24

Add protocol to send quest updates to client.
Add optional face to quests.
Nicolas Weeger 2011-07-23

Make container's contents browsable like the ground view.
Nicolas Weeger 2011-07-10

Randomize chests in random maps.
Nicolas Weeger 2011-07-08

Make immunity reduce symptoms when not totally immune.
This enables partial disease resistances.
Nicolas Weeger 2011-07-08

Display recipes a player knows that can use an item when examining it.
Nicolas Weeger 2011-07-08

Tentative fix for bug #3349111: invidious server crash.
Don't decrease socket_info.nconns if the socket is not available.
In some cases nconns gets decreased too much, which leads to issues.
The real fix would be to figure why there is a double decrease...
Nicolas Weeger 2011-07-05

Forbid un-locking items not in direct player's inventory.
Nicolas Weeger 2011-07-05

Tentative fix for bug #3349111: invidious server crash.
Do not destroy init_socket[0], instead try to reopen the listening socket.
Do not try to check its status if not valid.
Nicolas Weeger 2011-07-02

Correctly link all regions to their parent. Warn if not found.
Nicolas Weeger 2011-07-02

Remove NEW_MATERIAL_CODE support.
Nicolas Weeger 2011-06-29

Fix crash with detect monster on custom monsters.
Reference count wasn't uptodate, thus archetype would be freed.
Nicolas Weeger 2011-06-28

Rewrite picture loading logic to not be dependant on picture number
in the various bmaps and crossfire.x files.
Remove picture number in crossfire.x files.
Nicolas Weeger 2011-06-26
